# MapReduceLib

./: CMakeLists.txt  README.md
FileProcessor/: FileProcessorBase.hpp  FileProcessorInput.cpp  FileProcessorMapOutput.cpp  FileProcessorRedOutput.cpp
Mapper/: MapperBase.hpp  MapperImpl.cpp
Reducer/: ReducerBase.hpp  ReducerImpl.cpp
Shuffler/: ShufflerImpl.cpp
